--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "apollo-client": "^2.4.1",
     "apollo-link-context": "^1.0.8",
     "apollo-link-http": "^1.5.4",
+    "brace": "^0.11.1",
     "graphql": "^0.13.2",
     "graphql-tag": "^2.9.2",
     "react": "^16.4.2",
+    "react-ace": "^6.1.4",
     "react-apollo": "^2.1.11",
     "react-dom": "^16.4.2",
     "react-router-dom": "^4.3.1",
