--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "react-ace": "^6.1.4",
     "react-apollo": "^2.1.11",
     "react-dom": "^16.4.2",
+    "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.5",
-    "reactstrap": "^6.4.0"
+    "reactstrap": "^6.4.0",
+    "redux": "^4.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
