--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "apollo-link-http": "^1.5.4",
     "bootstrap": "^4.1.1",
     "brace": "^0.11.1",
+    "console-proxy": "^0.2.6",
     "graphql": "^0.13.2",
     "graphql-tag": "^2.9.2",
     "react": "^16.4.2",
