--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-ace": "^6.1.4",
     "react-apollo": "^2.1.11",
     "react-dom": "^16.4.2",
+    "react-icons": "^3.0.5",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.5",
